# doubao-ime-mac

./: .gitignore  Cargo.toml  GEMINI.md  README.md  build_mac.sh  dev.sh
.github/workflows/: release-mac.yml
PRD/: 语音输入增量更新优化.md
frontend/: index.html  settings.html
src/: lib.rs  main.rs
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/icons_backup/: icon.icns
src-tauri/icons_backup_v5/: icon.icns
src-tauri/src/: lib.rs
src/audio/: capture.rs
src/business/: hotkey_manager.rs  text_inserter.rs  voice_controller.rs
src/data/: config.rs  mod.rs
src/platform/: mod.rs
src/platform/macos/: mod.rs
src/platform/windows/: mod.rs
src/ui/: mod.rs  system_tray.rs
